added some styling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,9 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#title {
+  font-size: 77px;
+  font-family: Arial, Helvetica, sans-serif;
+  
 }
