--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: white;
+  background: grey;
 }
 
 code {
@@ -18,3 +18,5 @@ code {
   font-family: Arial, Helvetica, sans-serif;
   
 }
+/* Test */
+
