--- a/client/src/index.css
+++ b/client/src/index.css
@@ -67,10 +67,9 @@ form {
   /* border-radius: 100%;
   background: orangered; */
   margin: 0 auto;
-  margin-right: 30px;
   padding: 0;
   animation: heyjump .7s infinite;
-  font-size: 75px;
+  font-size: 100px;
 }
 
 hr {
@@ -80,7 +79,7 @@ hr {
 
 @keyframes heyjump{ 
   0%{transform: translateY(0px);}
-  50%{transform: translateY(-135px)}
+  50%{transform: translateY(-130px)}
   100%{transform: translateY(0px)}
 }
 
@@ -94,4 +93,42 @@ h3 {
 #align {
   visibility: hidden;
 }
+
+.section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.section h1 {
+  text-align: center;
+  font-size: 6rem;
+  font-family: 'Courier New', Courier, monospace;
+  padding: 10px;
+  margin: 15px;
+  z-index: 10;
+  opacity: 0.8; 
+}
+
+.video-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.color-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  width: 100%;
+  height: 100vh;
+  opacity: 0.5;
+}
+
 
