--- a/client/src/index.css
+++ b/client/src/index.css
@@ -95,9 +95,9 @@ h3 {
 }
 
 .section {
-  position: relative;
+  position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 150%;
   display: flex;
   align-self: center;
   justify-content: center;
@@ -130,5 +130,12 @@ h3 {
   height: 100vh;
   opacity: 0.5;
 }
+/* Home */
+.name {
+  position: relative;
+  top: 4em;
+}
 
-
+.text, .name {
+  color:orangered;
+}
