--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,24 +53,61 @@ form {
   font-family: "Courier New", Courier, monospace;
   font-size: 75px;
 }
-.wrapper {
-  width: 500px;
-  margin: 0 auto;
-}
 
-.jumping-ball {
+
+/* .jumping-ball {
+  display: inline-flex;
+  align-content: space-around;
   width: 50px;
   height: 50px;
-  /* border-radius: 100%;
-  background: orangered; */
   margin: 0 auto;
   padding: 0;
   animation: heyjump 0.7s infinite;
-  font-size: 100px;
+  font-size: 55px;
+} */
+.jumping-ball:nth-child(1),
+.jumping-ball:nth-child(2),
+.jumping-ball:nth-child(3),
+.jumping-ball:nth-child(4),
+.jumping-ball:nth-child(5),
+.jumping-ball:nth-child(6),
+.jumping-ball:nth-child(7),
+.jumping-ball:nth-child(8),
+.jumping-ball:nth-child(9) {
+  width: 50px;
+  height: 50px;
+  display: inline-flex;
+  animation: heyjump .9s ease-in infinite;
+  font-size: 45px;
 }
 
-.hands {
-  font-size: 100px;
+.jumping-ball:nth-child(2) {
+  animation-delay: .10s;
+}
+.jumping-ball:nth-child(3) {
+  animation-delay: .20s;
+}
+.jumping-ball:nth-child(4) {
+  animation-delay: .30s;
+}
+.jumping-ball:nth-child(5) {
+  animation-delay: .40s;
+}
+.jumping-ball:nth-child(6) {
+  animation-delay: .50s;
+}
+.jumping-ball:nth-child(7) {
+  animation-delay: .60s;
+}
+.jumping-ball:nth-child(8) {
+  animation-delay: .70s;
+}
+.jumping-ball:nth-child(9) {
+  animation-delay: .80s;
+}
+.wrapper {
+  width: 500px;
+  margin: 0 auto;
 }
 
 hr {
@@ -83,7 +120,7 @@ hr {
     transform: translateY(0px);
   }
   50% {
-    transform: translateY(-130px);
+    transform: translateY(-135px);
   }
   100% {
     transform: translateY(0px);
@@ -138,7 +175,7 @@ h1 {
 /* Home */
 .name {
   position: relative;
-  top: 4em;
+  top: 2em;
   
 }
 
