--- a/client/src/index.css
+++ b/client/src/index.css
@@ -205,6 +205,9 @@ h1 {
   justify-content: center;
   align-items: center;
 }
+.image {
+  align-self: center;
+}
 
 /* #background {
   background: url('./giphy.gif');
