--- a/client/src/index.css
+++ b/client/src/index.css
@@ -176,7 +176,6 @@ h1 {
 .name {
   position: relative;
   top: 2em;
-  
 }
 
 #text {
@@ -208,7 +207,12 @@ h1 {
 .image {
   align-self: center;
 }
-
+.video-size {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  z-index: -100;
+}
 /* #background {
   background: url('./giphy.gif');
 } */
