--- a/client/src/index.css
+++ b/client/src/index.css
@@ -219,3 +219,20 @@ h1 {
 /* .carousel {
   width: 2000p
 } */
+.chip {
+  display: inline-block;
+  padding: 0 25px;
+  height: 50px;
+  font-size: 16px;
+  line-height: 50px;
+  border-radius: 25px;
+  background-color: white;
+}
+
+.chip img {
+  float: left;
+  margin: 0 10px 0 -25px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
