--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,11 +35,12 @@ input {
 }
 form {
   width: 320px;
-  padding: 40px 20px;
+  padding: 20px 20px;
   box-sizing: border-box;
-  position: fixed;
+  position: absolute;
   left: 50%;
-  top: 50%;
+  top: 40%;
+  bottom: -20%;
   transform: translate(-50%, -50%);
 }
 #home-page {
